fix header and targets on IE10

--- a/_sass/layout/_l-header.scss
+++ b/_sass/layout/_l-header.scss
@@ -4,22 +4,23 @@ $header-height: rem(80px);
 .l-header {
   z-index: 20;
 
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  // display: -webkit-box;
+  // display: -ms-flexbox;
+  // display: flex;
+  // -webkit-box-align: stretch;
+  // -ms-flex-align: stretch;
+  // align-items: stretch;
+  // -webkit-box-pack: justify;
+  // -ms-flex-pack: justify;
+  // justify-content: space-between;
   transition: transform 0.5s ease;
   position: fixed;
   top: -70px;
   left: 0;
   right: 0;
 
-  max-width: $grid-max-width;
+  // max-width: $grid-max-width;
+  padding-left: rem(90px);
   height: $header-height;
   margin: 0 auto;
 
@@ -50,15 +51,13 @@ $header-height: rem(80px);
     -ms-flex-pack: center;
     justify-content: center;
     background-color: $white;
-    margin-left: rem(18px);
+    // margin-left: rem(18px);
+    float: left;
+    max-width: rem(200px);
+    width: rem(200px);
+    height: rem(80px);
 
     .logo-link {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
       img{
         max-width: rem(200px);
         width: rem(200px);
@@ -67,14 +66,14 @@ $header-height: rem(80px);
       }
     }
 
-    @media screen and (min-width: 768px) {
-      flex-basis: 37%;
-      width: rem(270px);
-    }
-
-    @media screen and (min-width: 768px) {
-      width: rem(360px);
-    }
+    // @media screen and (min-width: 768px) {
+    //   flex-basis: 37%;
+    //   width: rem(270px);
+    // }
+    //
+    // @media screen and (min-width: 768px) {
+    //   width: rem(360px);
+    // }
 
     @media screen and (min-width: $screen-l) {
       height: $header-height-desktop;
@@ -87,7 +86,8 @@ $header-height: rem(80px);
     justify-content: flex-end;
 
     @media screen and (min-width: 768px) {
-      width: 100%;
+      // width: 100%;
+      height: rem(80px);
     }
 
     .menus-wrapper {
@@ -96,7 +96,7 @@ $header-height: rem(80px);
       @media screen and (min-width: 768px) {
         width: 100%;
         position: static;
-        display: flex;
+        display: block;
         background-color: transparent;
         transform: translatex(0);
       }
